Fixed line spacing, font size, tab background colour is darker.

--- a/styles/progress.less
+++ b/styles/progress.less
@@ -49,7 +49,8 @@ progress {
                              @progress-shine-gradient;
   border-radius: 2px;
   background-size: 25px @progress-height, 100% 100%, 100% 100%;
-  -webkit-animation: animate-stripes 5s linear 6; // stop animation after 6 runs (30s) to limit CPU usage
+  -webkit-animation: animate-stripes 5s linear infinite;
+  animation: animate-stripes 5s linear infinite;
 }
 
 progress::-webkit-progress-bar {
