--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -13,6 +13,19 @@
 	.tree-view-resize-handle {
 		width: 8px;
 	}
+	//
+	// .icon-file-directory:before,
+	// .icon-file-text:before {
+	// 	margin: 0;
+	// 	padding: 0;
+	// 	content: '';
+	// 	width: 0px;
+	// 	height:0;
+	// }
+	//
+	li.entry {
+		font-size: @font-size;
+	}
 }
 
 .focusable-panel {
@@ -28,4 +41,9 @@
 			background: @background-color-selected;
 		}
 	}
+}
+
+.list-tree.has-collapsable-children .list-nested-item > .list-tree > li,
+.list-tree.has-collapsable-children .list-nested-item > .list-group > li {
+	margin-left: 0;
 }
