--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,64 +1,64 @@
 // Colors
 
-@text-color: #444;
-@text-color-subtle: #999;
-@text-color-highlight: #000;
-@text-color-selected: #fff;
+@text-color:                       #444;
+@text-color-subtle:                #999;
+@text-color-highlight:             #000;
+@text-color-selected:              #fff;
 
-@text-color-info: #5293d8;
-@text-color-success: #45A815;
-@text-color-warning: #CD8E00;
-@text-color-error: #c00;
+@text-color-info:                  #5293d8;
+@text-color-success:               darken(#529b2f, 5%);
+@text-color-warning:               darken(orange, 10%);
+@text-color-error:                 darken(#c00, 5%);
 
-@text-color-ignored: @text-color-subtle;
-@text-color-added: @text-color-success;
-@text-color-renamed: @text-color-info;
-@text-color-modified: @text-color-warning;
-@text-color-removed: @text-color-error;
+@text-color-ignored:               @text-color-subtle;
+@text-color-added:                 @text-color-success;
+@text-color-renamed:               @text-color-info;
+@text-color-modified:              @text-color-warning;
+@text-color-removed:               @text-color-error;
 
-@background-color-info: #0098ff;
-@background-color-success: #17ca65;
-@background-color-warning: #ff4800;
-@background-color-error: #c00;
-@background-color-highlight: rgba(0, 0, 0, .1);
-@background-color-selected: #6aa5e9;
+@background-color-info:            #0098ff;
+@background-color-success:         #17ca65;
+@background-color-warning:         #ff4800;
+@background-color-error:           #c00;
+@background-color-highlight:       rgba(0, 0, 0, .1);
+@background-color-selected:        #6aa5e9;
 
-@app-background-color: #ccc;
+@app-background-color:             #ccc;
 
-@base-background-color: #f4f4f4;
-@base-border-color: #9f9f9f;
+@base-background-color:            #f4f4f4;
+@base-border-color:                #9f9f9f;
 
-@pane-item-background-color: @base-background-color;
-@pane-item-border-color: @base-border-color;
+@pane-item-background-color:       @base-background-color;
+@pane-item-border-color:           @base-border-color;
 
 @input-background-color: white;
 @input-border-color: fadeout(@base-border-color, 10%);
 
-@tool-panel-background-color: @base-background-color;
-@tool-panel-border-color: @base-border-color;
+@tool-panel-background-color:      @base-background-color;
+@tool-panel-border-color:          @base-border-color;
 
-@inset-panel-background-color: #fff;
-@inset-panel-border-color: fadeout(@base-border-color, 10%);
+@inset-panel-background-color:     #fff;
+@inset-panel-border-color:         fadeout(@base-border-color, 10%);
 
-@panel-heading-background-color: #c3c3c3;
-@panel-heading-border-color: transparent;
+@panel-heading-background-color:   #c3c3c3;
+@panel-heading-border-color:       transparent;
 
-@overlay-background-color: #ececec;
-@overlay-border-color: @base-border-color;
+@overlay-background-color:         #ececec;
+@overlay-border-color:             @base-border-color;
 
-@button-background-color: @base-background-color;
-@button-background-color-hover: lighten(@button-background-color, 5%);
+@button-background-color:          @base-background-color;
+@button-background-color-hover:    lighten(@button-background-color, 5%);
 @button-background-color-selected: #888;
-@button-border-color: rgba(0, 0, 0, 0.15);
+@button-border-color:              rgba(0, 0, 0, 0.15);
 
-@tab-bar-background-color: #d8d8d8;
-@tab-bar-border-color: #ddd;
-@tab-background-color: #e8e8e8;
-@tab-background-color-active: #f0f0f0;
-@tab-border-color: lighten(@base-border-color, 10%);
+@tab-bar-background-color:         darken(#d8d8d8, 20%);
+@tab-bar-border-color:             #ddd;
+@tab-background-color:             #e8e8e8;
+@tab-background-color-active:      #f0f0f0;
+@tab-border-color:                 lighten(@base-border-color, 10%);
 
-@tree-view-background-color: #eee;
-@tree-view-border-color: @base-border-color;
+@tree-view-background-color:       #eee;
+@tree-view-border-color:           @base-border-color;
 
 @scrollbar-background-color: #F9F9F9; // Needs to be opaque -> atom/atom/issues/4578
 @scrollbar-color: #C1C1C1;
@@ -72,19 +72,19 @@
 
 // Sizes
 
-@font-size: 11px;
-@input-font-size: 14px;
-@disclosure-arrow-size: 12px;
+@font-size:               13px;
+@input-font-size: 	      14px;
+@disclosure-arrow-size:   14px;
 
-@component-padding: 10px;
-@component-icon-padding: 5px;
-@component-icon-size: 16px;
-@component-line-height: 25px;
-@component-border-radius: 2px;
+@component-padding:       10px;
+@component-icon-padding:   5px;
+@component-icon-size:     16px;
+@component-line-height:  1.5em;
+@component-border-radius:  2px;
 
-@tab-height: 26px;
+@tab-height:              28px;
 
 
 // Other
 
-@font-family: 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
+@font-family: 'Open Sans Bold', 'BlinkMacSystemFont', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
